[package]
name = "fluent-bundle-test"
version = "0.1.0"
authors = ["cy"]
edition = "2018"

[dev-dependencies]
criterion = "^0.2"

[dependencies]
wasm-bindgen = "0.2"
fluent-locale = "^0.4.1"
fluent-syntax = { path = "fluent-syntax/" }
failure = "^0.1"
failure_derive = "^0.1"
intl_pluralrules = "^1.0"
rental = "^0.5.2"

[lib]
crate-type = ["cdylib", "rlib"]
